[metadata]
name = open-flight
version = 2015.2
summary = OpenStack Distributed Systems Kernel
description-file =
    README.rst
author = BrainDataInc
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/BrainDataInc/open-flight
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    open-flight

[entry_points]
console_scripts =
    open-flight-all=open_flight.cmd.all:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[compile_catalog]
directory = trove/locale
domain = trove

[update_catalog]
domain = trove
output_dir = trove/locale
input_file = trove/locale/trove.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trove/locale/trove.pot

[wheel]
universal = 1
